Adding the complete job application portal without AWS and Docker